...
          },
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: 'Tickets',
            tabBarIcon: ({ focused, color }) => (
              <FontAwesomeIcon
                icon={focused ? faCardsBlankSolid : faCardsBlankRegular}
                size={22}
                color={color as string}
              />
...
